<resources>
    <string name="app_name">TapNEnjoy</string>
    <string name="lblSignUp">SignUp</string>
    <string name="lblLogOut">LogOut</string>
    <string name="lblLogIn">LogIn</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblUserName">Username</string>
    <string name="lblSearch">Search</string>
    <string name="lblAddress">Address</string>
    <string name="lblPassword">Password</string>
    <string name="lblPasswordConfirm">Confirm Password</string>
    <string name="lblBack">Back</string>
    <string name="lblIsSeller">Is Seller</string>
    <string name="createUserErrorMessage">Error to Create User</string>
    <string name="createUserSuccessMessasge">User successfully created</string>
    <string name="lblAlertTitle">System Alert</string>
    <string name="lblOk">Ok</string>
    <string name="userExistsMessage">Username already exists</string>
    <string name="lblRequired">Required</string>
    <string name="passwordsMatchMessage">Passwords do not match</string>
    <string name="notExistsMessage">Does not exist</string>
    <string name="incorrectPasswordMessage">Incorrect Password</string>
    <string name="lblProductImageContent">ProductImage</string>
    <string name="lblAddNumber">+</string>
    <string name="lblSubNumber">-</string>
    <string name="lblZero">0</string>
    <string name="hintProductNumber">0</string>
    <string name="lblBtnAddCart">Add to Cart</string>
    <string name="lblBtnBuy">Buy</string>
    <string name="lblBtnOffer">Make Offer</string>
    <string name="lblStock">Stock</string>
    <string name="lblDelete">Delete</string>
    <string name="lblEmptyPrice">$0,00</string>
    <string name="contentImageDesc">Product Image</string>
    <string name="lblAddProduct">Add Product</string>
    <string name="lblAddNewProduct">Add New Product</string>
    <string name="lblUpdateProduct">Update Product</string>
    <string name="lblDeleteProduct">Delete Product</string>
    <string name="lblBtnMyOrders">MY ORDERS</string>
    <string name="lblBtnWatchList">WATCH LIST</string>
    <string name="lblBtnMyOffers">MY OFFERS</string>
    <string name="lblBtnStartShopping">START SHOPPING</string>
    <string name="lblInStock">In stock:</string>
    <string name="hintProductName">Product Name</string>
    <string name="hintProductDescription">Product Description</string>
    <string name="hintProductPrice">Product Price</string>
    <string name="hintProductStock">Product Stock</string>
</resources>
